<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/agentesFragment"
        android:title="@string/str_agentes"
        android:icon="@drawable/baseline_groups_24"/>
    <item
        android:id="@+id/armasFragment"
        android:title="@string/str_armas"
        android:icon="@drawable/img_mini_vandal"
        />
    <item
        android:id="@+id/mainFragment"
        android:title="@string/str_valorant"
        android:icon="@drawable/img_mini_logo"
        android:checked="true"/>
    <item
        android:id="@+id/mapasFragment"
        android:title="@string/str_map"
        android:icon="@drawable/baseline_map_24"/>
    <item
        android:id="@+id/bottom_perfil"
        android:title="@string/str_perfil"
        android:icon="@drawable/baseline_movie_filter_24"
        />
</menu>